--- a/tests/unit/test1_unit_tests/testcase.yaml
+++ b/tests/unit/test1_unit_tests/testcase.yaml
@@ -1,5 +1,5 @@
 common:
-  platform_allow: native_posix native_posix/native/64 mps2/an521/cpu0 qemu_malta/qemu_malta/be
+  platform_allow: native_sim native_sim/native/64 mps2/an521/cpu0 qemu_malta/qemu_malta/be
   tags: zcbor unit
   timeout: 120  # Because of test_size64
 
