--- a/tests/unit/test3_float16/testcase.yaml
+++ b/tests/unit/test3_float16/testcase.yaml
@@ -1,6 +1,6 @@
 tests:
   zcbor.unit.test3:
-    platform_allow: native_posix native_posix/native/64
+    platform_allow: native_sim native_sim/native/64
     tags: zcbor unit float16
     timeout: 240
   zcbor.unit.test3.release:
